force-app/main/default/objects/Field_Mapping__c/Field_Mapping__c.object-meta.xml
<CustomObject>
    <label>Field Mapping</label>
    <nameField>
        <displayFormat>FM-{0000000000}</displayFormat>
        <label>Field Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>