force-app/main/default/objects/Field_Mapping__c/fields/Exclude_from_tpu__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_tpu__c</fullName>
    <defaultValue>false</defaultValue>
    <description>That field is defined to exclude Mapping records in use on code level for look up purposes(like developer id and project id Mapping)
Make it checked for the fields which do not exist on external system.</description>
    <inlineHelpText>That field is defined to exclude Mapping records in use on code level for look up purposes(like developer id and project id Mapping)
Make it checked for the fields which do not exist on external system.</inlineHelpText>
    <label>Exclude from Third Party update</label>
    <type>Checkbox</type>
</CustomField>